# EmptyHeaded

./: .gitignore  .travis.yml  Dockerfile  README.md  clean.sh  compile.sh  env.sh  python_fun.sublime-workspace  setup.sh  setupEnv.sh
dependencies/: README.txt  install.sh
docker/: Dockerfile  README.txt
examples/: test.csv
ghds/: barbell.json  triangle.json
notebooks/: EmptyHeaded.ipynb  Untitled.ipynb
python/: TestQuery.ipynb  config.py  database.py  emptyheaded.py  graph.tsv  ir.py  master.py  parsers.py  relation.py  schema.py  test.csv  test.py  test_optimizer.py  (+1 more)
storage_engine/apps/: 4CliqueAgg_SelectionNP.cpp  4Clique_Selection.cpp  4Clique_SelectionNP.cpp  BarbellAgg_SelectionNP.cpp  Barbell_Selection.cpp  Barbell_SelectionNP.cpp  CMakeLists.txt  Query.hpp  Query0_attr.cpp  Query12_ghd.cpp  Query14.cpp  Query4_attr.cpp  Query4_ghd.cpp  Query8_attr.cpp  Query8_ghd.cpp  Query8_pipeline.cpp  createGraphDB1.cpp  createGraphDBEdgelist.cpp  dense_matrix_multiply.cpp  dmm_eh.cpp  dmm_mkl.cpp  dmm_nosimd.cpp  dmm_regblock.cpp  dmm_simd.cpp  dmv_eh.cpp  dmv_mkl.cpp  fft.hpp  fft_gen_2_2.cpp  ffthelper.hpp  graph.tsv  load.hpp  load_db_new_0.cpp  load_db_new_1.cpp  load_db_new_2.cpp  load_db_new_3.cpp  lollipop.cpp  mat.tsv  matrix_multiply.cpp  matrix_multiply_opt.cpp  matrix_vector.cpp  (+20 more)
storage_engine/apps/graph/: createGraphDB1.cpp  lollipop.cpp  printGraphEdgelist.cpp  triangle_agg.cpp  triangle_materialize.cpp
storage_engine/apps/lubm/: Query12_ghd.cpp  Query12_ghd.hpp  Query14.cpp  Query14.hpp  Query2_attr.cpp  Query7_attr.cpp  Query8_ghd.cpp
(+431 files in other folders)
